--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,6 +1,5 @@
 footer{
     background-color: $beige;
-    width: 100vw;
     height: 445px;
     padding: 30px 0;
     font-family: "Teachers", sans-serif;
@@ -67,7 +66,7 @@ footer{
 .createdby{
     background-color: #000;
     padding: 10px 35px;
-    width: 100vw;
+    width: 100%;
     color: #fff;
     text-align: right;
     font-family: "Teachers", sans-serif;  
