--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -10,6 +10,7 @@ a{
     }
 }
 .wrapper{
+    width: 90%;
     max-width: 1350px;
     margin: 0 auto;
 }
@@ -38,4 +39,7 @@ h2{
         color: $beige;
     }
 
+}
+.fa-user{
+    margin-right: 10px;
 }
