--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,8 +1,7 @@
 header{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 70px auto -50px;
-    position: relative;
     @media screen and (min-width: 1024px){
         margin: 125px auto -75px;
     }
@@ -20,9 +19,6 @@ header{
         border-bottom-right-radius: 20px;
         background-color: $aubergine;
         font-size: 20px;
-        .fa-user{
-            margin-right: 10px;
-        }
         a{
             color: #fff;
         }   
@@ -30,7 +26,8 @@ header{
 }
 //div beige avec logo PamG Digital
 .logoBox{
-    padding: 30px 30px 20px;
+    width: 100%;
+    padding: 30px 30px 15px;
     background-color: $beige;
     text-align: center;
     img{
@@ -50,33 +47,28 @@ header{
     }
 }
 //div photo Pam sourire
-.backgroundpictBox{
-    position: relative;
-    .backgroundpict{
-        background: url(../images/PamSmiling.JPG) center/cover;
-        width: 100vw;
-        height: 45vh;
-        position: absolute;
-        top: -50px;
-        left: 0;
-        z-index: -3;
-        &::after{
-            @include whitefilter_before(0.2);
-        }  
-        @media screen and (min-width: 1024px){
-            height: 55vh; 
-            top: 0; 
-        }
-    } 
+.backgroundpict{
+    background: url(../images/PamSmiling.JPG) center/cover;
+    width: 100%;
+    height: 60vh;
+    position: absolute;
+    top: 135px;
+    left: 0;
+    z-index: -3;
+    &::after{
+        @include whitefilter_before(0.2);
+    }  
+    @media screen and (min-width: 1024px){
+        top: 255px; 
+    }
 }
-
 .beigeCircle{
     width: 400px;
     height: 400px;
     border-radius: 50%;
     background-color: rgb(250, 242, 221, 0.7);
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     translate: -50% 0 0;
     z-index: -2;
@@ -84,7 +76,7 @@ header{
         width: 450px;
         height: 450px;
         border-radius: 50%;
-        top: 20%;
+        top: 30%;
         left: 2%;
         translate: -2% 0 0;
         
@@ -93,7 +85,7 @@ header{
         width: 500px;
         height: 500px;
         border-radius: 50%;
-        top: 27%;
+        top: 37%;
         left: 6%;  
     }
 }
@@ -101,7 +93,7 @@ header{
     background-color: rgb(93, 18, 59, 0.6);
     border-radius: 50%;
     position: absolute;
-    top: 40%;
+    top: 50%;
     z-index: -1;
     display: none;
     @media screen and (min-width: 820px){
@@ -126,8 +118,8 @@ header{
     padding: 30px 10px;
     position: absolute;
     top: -3%;
-    left: 50%;
-    translate: -50% 0 0;
+    left: 49%;
+    translate: -49% 0 0;
     .slug{
         opacity: 0;
         transition: 0.5s ease-in-out;
@@ -161,32 +153,32 @@ header{
     width: 150px;
     rotate: -60deg;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 2%;
     @media screen and (min-width: 820px){
         width: 250px;
-        top: 58%;
+        top: 68%;
         left: -1%;
         z-index: 1;
         rotate: -105deg;
     }   
     @media screen and (min-width: 1024px){
-        top: 67%;
+        top: 77%;
         left: 11%;
         rotate: -125deg;
     }  
     @media screen and (min-width: 1400px){
-        top: 70%;
+        top: 80%;
         left: 15%;
         rotate: -145deg;
          
     } 
     @media screen and (min-width: 1500px){
-        left: 7%; 
+        left: 17%; 
     }
     @media screen and (min-width: 1670px){
         width: 300px;
-        top: 69%;
+        top: 79%;
         left: 16%;
         rotate: 200deg;
     }  
@@ -195,16 +187,16 @@ header{
     text-align: center;
     width: 100px;
     position: absolute;
-    top: 65%;
+    top: 75%;
     left: 5%;
     rotate: -15deg;
     font-family: "Gochi Hand", cursive;
     @media screen and (min-width: 820px){
-        top: 72%;
+        top: 82%;
         left: 22%;
     }
     @media screen and (min-width: 1024px){
-        top: 82%;
+        top: 92%;
         left: 13%; 
     }  
     @media screen and (min-width: 1400px){
@@ -217,17 +209,16 @@ header{
         left: 16%;
     } 
 }
-
 .headerbtn{
     width: 95%;
     height: 70px;
     position: absolute;
-    top: 74%;
+    top: 90%;
     left: 50%;
-    translate: -50% 0 0;
+    translate: -50% 0 ;
+    margin: 0 auto;
     @media screen and (min-width: 1024px){
         width: 35%;
-        
     }
 }
 
