--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -2,7 +2,7 @@
 //div mon approche
 .approcheBckgrd{
     background-color: $beige;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     padding: 0 0 50px;
     .approcheBoxes{
@@ -80,7 +80,7 @@ transform: translateX(0);
 //div photo balançoire
 .balancoirebckgd{
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 400px;
     background: url(../images/PamBalancoire.JPG) right/cover;
     @media screen and (min-width: 1200px){
@@ -129,21 +129,24 @@ transform: translateX(0);
 .rappelbtn{
     text-align: center;
     background-color: #fff;
-    width: 100vw;
-    height: 400px;
-    position: relative;
+    height: 600px;
     .mainbtn{
         width: 80%;
         height: 70px;
-        position: absolute;
-        top: 75%;
-        left: 50%;
-        translate: -50% -50% 0;
+        margin: 50px auto;
         @media screen and (min-width: 1024px){
             width: 35%;
         }
     }
+    p{
+        text-transform: uppercase;
+    }
+    @media screen and (min-width: 820px){
+       height: 500px;
+    }
 }
+
+
 .cookie{
     background-color: $aubergine;
     width: 90%;
